Prevent print links icon and text from separating when wrapping

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2784,3 +2784,8 @@ div#panels-ipe-control-container {
         }
     }
 }
+
+.pane-print-ui-print-links .pane-content span {
+    margin: 0 1em 0 0;
+    display: inline-block;
+}
